// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RuleSuggestion should display RuleSuggestion 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="avatar"
    >
      <div
        class="component hasImage"
        style="width: 36px; height: 36px;"
      >
        <div
          class="initials"
          style="width: 36px; height: 36px; font-size: 15px;"
        >
          <span
            style="line-height: 38px;"
          >
            GT
          </span>
        </div>
        <img
          alt="avatar"
          class="gravatar"
          src="/static/private/js/assets/img/icons/gorgias-icon-logo-white.png"
        />
      </div>
    </div>
    <header
      class="header"
    >
      <div>
        <div
          class="headerTitle"
        >
          <span>
            Gorgias Tips
          </span>
          <span>
            Only visible to you
          </span>
        </div>
        <div
          class="headerInfo"
        >
          <span>
            Automate this ticket with the
             
            <a
              href="/app/settings/rules#rule-library?rule-recipe-fixture"
              rel="noreferrer"
              target="_blank"
            >
              my rule
            </a>
             
            rule!
             
          </span>
          <span>
            Here’s a preview:
          </span>
        </div>
      </div>
      <div
        class="buttonsContainer"
      >
        <div
          class="buttons"
        >
          <button
            class="wrapper fill secondary small"
            type="button"
          >
            Install
          </button>
          <button
            class="wrapper fill primary small"
            type="button"
          >
            Apply & Send
          </button>
        </div>
        <div
          class="chevron"
        >
          <i
            class="material-icons-round"
          >
            expand_less
          </i>
        </div>
      </div>
    </header>
    <div
      class="bodyContainer"
    >
      <div
        class="collapse show"
      >
        <div
          class="textContainer"
        >
          <div>
            <div>
              Text coming from rule suggestion
            </div>
          </div>
        </div>
        <div />
      </div>
    </div>
  </div>
</div>
`;

exports[`RuleSuggestion should not display RuleSuggestion (feature flag false) 1`] = `<div />`;

exports[`RuleSuggestion should not display RuleSuggestion (no addon) 1`] = `<div />`;

exports[`RuleSuggestion should not display RuleSuggestion (no suggestion) 1`] = `<div />`;

exports[`RuleSuggestion should send internal note because no text in suggestion 1`] = `
Array [
  Array [
    "nowTimestamp",
    Object {
      "actions": Immutable.List [
        Immutable.Map {
          "arguments": Immutable.Map {
            "tags": "auto-close",
          },
          "name": "addTags",
          "title": "Add tags",
          "status": "pending",
          "type": "user",
        },
      ],
      "attachments": Array [],
      "body_html": "<div>Sent via suggested rule: <a target=\\"_blank\\" href=\\"/app/settings/rules#rule-library?rule-recipe-fixture\\">my rule</a></div>",
      "body_text": "Sent via suggested rule: <a target=\\"_blank\\" href=\\"/app/settings/rules#rule-library?rule-recipe-fixture\\">my rule</a>",
      "channel": "email",
      "from_agent": true,
      "macros": Array [],
      "meta": Object {
        "rule_suggestion_slug": "rule-recipe-fixture",
      },
      "public": false,
      "sender": Object {
        "email": "support@acme.gorgias.io",
        "id": 1,
        "name": "Acme Support",
      },
      "source": Object {
        "extra": Object {},
        "from": Object {
          "address": "",
          "name": "",
        },
        "type": "internal-note",
      },
      "via": "helpdesk",
    },
    null,
  ],
]
`;

exports[`RuleSuggestion should send message 1`] = `
Array [
  Array [
    "nowTimestamp",
    Object {
      "actions": Immutable.List [
        Immutable.Map {
          "arguments": Immutable.Map {
            "tags": "auto-close",
          },
          "name": "addTags",
          "title": "Add tags",
          "status": "pending",
          "type": "user",
        },
      ],
      "attachments": Array [],
      "body_html": "<div>Text coming from rule suggestion</div>",
      "body_text": "Text coming from rule suggestion",
      "channel": "email",
      "from_agent": true,
      "macros": Array [],
      "meta": Object {
        "rule_suggestion_slug": "rule-recipe-fixture",
      },
      "public": true,
      "sender": Object {
        "email": "support@acme.gorgias.io",
        "id": 1,
        "name": "Acme Support",
      },
      "source": Object {
        "extra": Object {},
        "from": Object {
          "address": "support@acme.gorgias.io",
        },
        "to": Array [
          Object {
            "address": "steve.frizeli@gmail.com",
            "name": "Steve Frizeli",
          },
        ],
        "type": "email",
      },
      "via": "helpdesk",
    },
    null,
  ],
]
`;
